lab3 documentation update.