@@ -1,15 +1,16 @@
-package tasks.model;
+package tasks.services;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import org.junit.jupiter.api.*;
+import tasks.model.ArrayTaskList;
+import tasks.model.Task;
 import tasks.utils.TasksOperations;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -44,7 +45,7 @@ class TaskOperationsTest {
         Date start = sdf.parse("2025-05-05 10:00");
         Date end = sdf.parse("2025-05-04 10:00");
         Iterable<Task> tasks = tasksOps.incoming(start, end);
-        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).collect(Collectors.toList());;
+        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).toList();
         assertEquals(0, filtered.size());
     }
 
@@ -54,7 +55,7 @@ class TaskOperationsTest {
         Date start = sdf.parse("2025-05-05 10:00");
         Date end = sdf.parse("2025-05-06 10:00");
         Iterable<Task> tasks = tasksOps.incoming(start, end);
-        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).collect(Collectors.toList());
+        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).toList();
         assertEquals(0, filtered.size());
     }
 
@@ -72,7 +73,7 @@ class TaskOperationsTest {
         Date start = sdf.parse("2025-05-06 10:00");
         Date end = sdf.parse("2025-05-07 10:00");
         Iterable<Task> tasks = tasksOps.incoming(start, end);
-        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).collect(Collectors.toList());
+        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).toList();
         assertEquals(0, filtered.size());
     }
 
@@ -90,7 +91,7 @@ class TaskOperationsTest {
         Date start = sdf.parse("2025-05-02 11:00");
         Date end = sdf.parse("2025-05-03 11:00");
         Iterable<Task> tasks = tasksOps.incoming(start, end);
-        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).collect(Collectors.toList());
+        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).toList();
         assertEquals(0, filtered.size());
     }
 
@@ -108,7 +109,7 @@ class TaskOperationsTest {
         Date start = sdf.parse("2025-05-04 12:00");
         Date end = sdf.parse("2025-05-05 12:00");
         Iterable<Task> tasks = tasksOps.incoming(start, end);
-        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).collect(Collectors.toList());
+        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).toList();
         assertEquals(1, filtered.size());
         assertEquals(filtered.get(0), t1);
     }
@@ -135,7 +136,7 @@ class TaskOperationsTest {
         Date start = sdf.parse("2025-05-03 12:00");
         Date end = sdf.parse("2025-05-07 12:00");
         Iterable<Task> tasks = tasksOps.incoming(start, end);
-        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).collect(Collectors.toList());
+        List<Task> filtered = StreamSupport.stream(tasks.spliterator(),false).toList();
         assertEquals(2, filtered.size());
         assertEquals(filtered.get(0), t1);
         assertEquals(filtered.get(1), t2);
